<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fi.foyt</groupId>
	<artifactId>foursquare-api</artifactId>
	<packaging>jar</packaging>
	<version>1.0.17</version>
	<name>Foursquare API</name>
	<licenses>
		<license>
			<name>GNU LGPL v3</name>
			<url>http://www.gnu.org/licenses/lgpl.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
		<maven.compile.encoding>UTF-8</maven.compile.encoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20090211</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>1.9.22</version>
			<!-- not required by typical or Android usage. see https://github.com/clinejj/foursquare-api-java/issues/1 -->
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Gauge - Nexus Releases Repository</name>
			<url>http://ci.perceptool.com.br:8080/nexus/content/repositories/releases</url>
			<layout>default</layout>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Gauge - Nexus Snapshots Repository</name>
			<url>http://ci.perceptool.com.br:8080/nexus/content/repositories/snapshots</url>
			<layout>default</layout>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<includes>
						<include>**/*.java</include>
					</includes>
					<parallel>methods</parallel>
					<threadCount>10</threadCount>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine> 
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
				<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<goals>deploy</goals>
				</configuration>
			</plugin>
		</plugins>
		
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- http://stackoverflow.com/a/22296107/122441 -->
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<!-- http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html -->
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<scm>
		<url>https://github.com/robsoncassol/foursquare-api-java</url>
		<connection>scm:git:git@github.com/robsoncassol/foursquare-api-java.git</connection>
		<developerConnection>scm:git:git@github.com:robsoncassol/foursquare-api-java.git</developerConnection>
		<tag>foursquare-api-1.0.17</tag>
	</scm>

	<organization>
		<name>Foyt</name>
		<url>http://www.foyt.fi</url>
	</organization>

	<url>http://foursquare-api-java.googlecode.com/</url>
	<description>Foursquare V2 API for Java</description>
	
</project>
